actually ACTUALLY fix budget bar styling and edit spacing on student dashboard

--- a/assets/sass/dashboard.scss
+++ b/assets/sass/dashboard.scss
@@ -222,7 +222,7 @@ html {
 .goShopping {
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 10px;
     justify-content: space-between;
     div {
